--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -181,15 +181,16 @@
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Alz \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Alz/data/Alz_passed_gene_region_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list.txt \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --output_path /home/hs3163/Project/Alz \\\n",
     "  --window 10000 \\\n",
-    "  --container /home/hs3163/system_file/twas_latest.sif \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
-    "  -J 6 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
+    "  --asso_mem \"60G\" \\\n",
+    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &"
    ]
   },
   {
@@ -244,6 +245,59 @@
     "  --asso_mem \"60G\" \\\n",
     "  --job_size 1\\\n",
     "  -J 6 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "# To see what happened in the window of 500000\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --output_path /home/hs3163/Project/Alz \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  -J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "# To see what happened in the hsq cut off of 0.05\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/Alz_passed_gene_region_list.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --output_path /home/hs3163/Project/Alz \\\n",
+    "  --window 10000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --job_size 1\\\n",
+    "  --hsq_p 0.05 \\\n",
+    "  -J 10 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
    ]
   },
   {
