--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -131,12 +131,16 @@
     "RSM_AC_gene_list%>%filter(gene_ID%in%Alz_gene$ensembl_id)%>%filter(gene_ID == \"ENSG00000283632\")\n",
     "\n",
     "\n",
-    "# Export the region list for DLPFC and PCC\n",
+    "# Export the region list for DLPFC and PCC, AC\n",
     "RSM_ALZ_gene_DLPFC = RSM_DLPFC_gene_list%>%filter(gene_ID%in%Alz_gene$ensembl_id)\n",
     "RSM_ALZ_gene_DLPFC%>%write_delim(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/DLPFC/RSM_Alz_region_list.txt\",delim = \"\\t\")\n",
     "\n",
     "RSM_ALZ_gene_PCC = RSM_PCC_gene_list%>%filter(gene_ID%in%Alz_gene$ensembl_id)\n",
-    "RSM_ALZ_gene_PCC%>%write_delim(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/PCC/RSM_Alz_region_list.txt\",delim = \"\\t\")"
+    "RSM_ALZ_gene_PCC%>%write_delim(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/PCC/RSM_Alz_region_list.txt\",delim = \"\\t\")\n",
+    "\n",
+    "RSM_ALZ_gene_AC = RSM_AC_gene_list%>%filter(gene_ID%in%Alz_gene$ensembl_id)\n",
+    "RSM_ALZ_gene_AC%>%write_delim(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Rosmap/Data/AC/RSM_Alz_region_list.txt\",delim = \"\\t\")\n",
+    "\n"
    ]
   },
   {
@@ -599,7 +603,11 @@
     "summ\n",
     "hsq%>%ggplot(aes(x = pval))+geom_histogram()+geom_vline(xintercept = 0.05)+geom_vline(xintercept = 0.01)+ggtitle(\"Distribution of p value\")\n",
     "hsq%>%filter(heritability >= 0, heritability <= 1)%>%ggplot(aes(x = heritability))+geom_density()+ggtitle(\"Distribution of heritability\")\n",
-    "hsq%>%filter(heritability >= 0, heritability <= 1)%>%ggplot(aes(x = heritability,y = pval))+geom_point()"
+    "hsq%>%filter(heritability >= 0, heritability <= 1)%>%ggplot(aes(x = heritability,y = pval))+geom_point()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
