--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -195,38 +195,115 @@
    },
    "outputs": [],
    "source": [
+    "#DLPFC, Full \n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
-    "  --gwas_sumstat /home/hs3163/Project/Alz_DLPFC/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Alz_DLPFC \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_DLPFC_FULL_2 \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Alz_DLPFC/data/RSM_Alz_region_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_DLPFC.txt \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
-    "  --output_path /home/hs3163/Project/Alz_DLPFC \\\n",
     "  --window 10000 \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
-    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "#DLPFC, SNP \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_DLPFC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_DLPFC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#PCC, Full\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_2.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_PCC_Full \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "#PCC, AD SNP\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
-    "  --gwas_sumstat /home/hs3163/Project/Alz_PCC/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/pccTissue/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Alz_PCC \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_PCC_SNP \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Alz_PCC/data/RSM_Alz_region_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
-    "  --output_path /home/hs3163/Project/Alz_PCC \\\n",
-    "  --window 10000 \\\n",
+    "  --window 500000 \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &\n"
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP_2 \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "#AC, AD SNP\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_2.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_AC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_AC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -857,6 +934,57 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "library(dplyr)\n",
+    "library(plink2R)\n",
+    "\n",
+    "\n",
+    "wgt_list = read.table(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Remote_Proj/Alz/Alz_PCC_SNP/WEIGHTS/geneTpmResidualsAgeGenderAdj_rename.weights_list.txt\",header = T)\n",
+    "wgt_list$WGT\n",
+    "chr = unique(wgt_list$CHR)\n",
+    "N = nrow(wgt_list)\n",
+    "\n",
+    "\n",
+    "wgt.file = paste(wgt_list$WGT[wgt_list$CHR == 7])\n",
+    "wgt.file =\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Remote_Proj/Alz/Alz_PCC_SNP/WEIGHTS/geneTpmResidualsAgeGenderAdj_rename.ENSG00000085514.wgt.RDat\"\n",
+    "wgt_info = attach(wgt.file)\n",
+    "\n",
+    "wgt_info$wgt.matrix[,]\n",
+    "wgt_info$wgt.matrix[,wgt_info$mod.best\n",
+    "\n",
+    "row.pval = grep( \"pval\" , rownames(wgt_info$cv.performance) )\n",
+    "mod.best = which.min(apply(wgt_info$cv.performance[row.pval,,drop=F],2,min,na.rm=T))\n",
+    "cur.twasr2pred = wgt.matrix[,mod.best] %*% cur.LD %*% wgt.matrix[,mod.best]\n",
+    "\n",
+    "\n",
+    "\n",
+    "wgt_info$wgt.matrix[,mod.best]\n",
+    "\n",
+    "\n",
+    "genos = read_plink(\"\",impute=\"avg\")\n",
+    "?read_plink\n",
+    "cur.LD = t(cur.genos) %*% cur.genos / (nrow(cur.genos)-1)\n",
+    "\n",
+    "\n",
+    "wgt_info\n"
+   ]
   },
   {
    "cell_type": "code",
