--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -246,6 +246,7 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
+    "  --exclude_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "#PCC, AD SNP\n",
@@ -263,8 +264,27 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
-    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP_2 \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "#AC, AD Full\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_2.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_AC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_AC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --exclude_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
     "\n",
     "\n",
     "\n",
