--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -246,8 +246,14 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
-    "  --exclude_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  --exclude_snp ~/Project/Alz/data/pb_snp \\\n",
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "#PCC, Full_40 samples\n",
+    "'\n",
+    "'\n",
+    "\n",
+    "\n",
     "\n",
     "#PCC, AD SNP\n",
     "\n",
@@ -267,12 +273,15 @@
     "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
-    "#AC, AD Full\n",
+    "\n",
+    "\n",
+    "\n",
+    "#AC, FULL\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb twas_fusion  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_2.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Alz/Alz_AC_SNP \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_AC_FULL \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_AC.txt \\\n",
     "  --region_name 1 \\\n",
@@ -282,9 +291,8 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
-    "  --exclude_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  --exclude_snp ~/Project/Alz/data/pb_snp \\\n",
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -304,7 +312,7 @@
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
     "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n"
    ]
   },
   {
@@ -364,6 +372,15 @@
     "colnames(Chr7)[4] = \"Pos\"\n",
     "Chr7%>%filter(Pos>100562228,Pos<100596129)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1041,7 +1058,48 @@
     "kernel": "R"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "echo filename heritability h_SE pval > all_hsq.txt \n",
+    " 1548  cat *hsq >> all_hsq.txt\n",
+    "\n",
+    "for f in $(ls */WEIGHTS/*.txt)\n",
+    "do\n",
+    "  print \"File $f\"\n",
+    "done\n",
+    "\n",
+    "\n",
+    "\n",
+    "for f in $(echo */WEIGHTS/); \n",
+    "do \n",
+    "     echo filename heritability h_SE pval > $f/all_hsq.txt\n",
+    "     cat $f/*hsq >> $f/all_hsq.txt\n",
+    "done\n",
+    "\n",
+    "\n",
+    "\n",
+    "for f in $(ls ); \n",
+    "do \n",
+    "    echo /Users/haosun/Documents/WG_Reasearch_Assisstant/Remote_Proj/Alz/$f >> diretory.txt\n",
+    "done\n",
+    "\n",
+    "\n",
+    "scp hs3163@hgrcgrid.cpmc.columbia.edu:~/Project/Alz/$f/WEIGHTS/all_hsq.txt ./$f/WEIGHTS/all_hsq.txt\n",
+    "\n",
+    "\n",
+    "\n",
+    "for f in $(echo */result/); \n",
+    "do \n",
+    "    cat $f/*txt > $f/all_result.txt\n",
+    "done\n",
+    "\n",
+    "\n",
+    "\n",
+    "echo filename heritability h_SE pval > $f/all_hsq.txt\n",
+    "     cat $f/*hsq >> $f/all_hsq.txt\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
