--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -1100,6 +1100,94 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [],
+   "source": [
+    "# Test the heritability issue with example data\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_2.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/example/gene_exp_file.txt  \\\n",
+    "  --wd /home/hs3163/Project/example/ \\\n",
+    "  --genotype_list /home/hs3163/Project/example/genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/example/gene_region_list.txt \\\n",
+    "  --region_name 2 \\\n",
+    "  --data_start 5 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "# Test the heritability issue with same Coord method\n",
+    "#DLPFC, SNP \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz_same_coord/Alz_DLPFC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz_same_coord/data/RSM_Alz_region_list_DLPFC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "#PCC, SNP \n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz_same_coord/Alz_PCC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz_same_coord/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "#AC, SNP\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz_same_coord/Alz_DLPFC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz_same_coord/data/RSM_Alz_region_list_DLPFC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "/home/hs3163/Project/Alz_same_coord/data"
+   ]
   }
  ],
  "metadata": {
