--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -1243,14 +1243,12 @@
     "\n",
     "\n",
     "#AC, SNP, Problem genes\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb association_test  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb compute_wgt  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_2.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Alz/Alz_AC_SNP \\\n",
-    "  --output_path /home/hs3163/Project/Alz/Alz_AC_SNP_6 \\\n",
-    "  --weights_list /home/hs3163/Project/Alz/Alz_AC_SNP/WEIGHTS/Alt_weight_list.txt \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_AC_SNP_6 \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Alz_same_coord/data/RSM_Alz_region_list_AC.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_AC_test.txt \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
