--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -209,6 +209,7 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
+    "  --exclude_snp ~/Project/Alz/data/pb_snp \\\n",
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "#DLPFC, SNP \n",
@@ -337,7 +338,7 @@
    "outputs": [],
    "source": [
     "#DLPFC, Full \n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb susie  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb susie  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Alz/Alz_DLPFC_FULL_2 \\\n",
@@ -350,7 +351,8 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "  --exclude_snp ~/Project/Alz/data/pb_snp \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &\n",
     "\n",
     "#DLPFC, SNP \n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb susie  \\\n",
@@ -447,7 +449,31 @@
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
     "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#PCC, AD SNP\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb susie  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/Alz/Alz_PCC_SNP \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"60G\" \\\n",
+    "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
