--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "#DLPFC, Full \n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb susie  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb susie  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Alz/Alz_DLPFC_FULL_2 \\\n",
@@ -470,7 +470,7 @@
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
     "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &\n",
     "\n",
     "\n",
     "\n"
