--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -408,7 +408,7 @@
     "  --job_size 1\\\n",
     "  --asso_mem \"60G\" \\\n",
     "  --extract_snp ~/Project/Alz/data/AD_sumstats_SNP \\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml&\n",
     "\n",
     "\n",
     "\n",
