--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -432,7 +432,7 @@
     "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "\n",
-    "\n",
+    "ENSG00000159784\n",
     "#AC, AD SNP\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb susie  \\\n",
