--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -2215,6 +2215,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb susie_cv    --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt   --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt    --wd /home/hs3163/Project/Alz/Alz_AC_SNP_CV   --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt   --region_list /home/hs3163/Project/Alz/data/RSM_Alz_region_list_AC.txt   --region_name 1   --data_start 2   --window 500000   --container /mnt/mfs/statgen/containers/twas_latest.sif   --model bslmm blup lasso top1 enet   --job_size 1  --asso_mem \"6G\"   --extract_snp ~/Project/Alz/data/AD_sumstats_SNP --cv_times 100  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
